# zkstruct

./: .gitignore  Cargo.toml  README.md
examples/: test.rs
src/: lib.rs
