[package]
name = "zkstate"
version = "0.1.0"
authors = ["Colum McGaley <colum.mcgaley@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zookeeper = "0.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
treediff = { version = "4.0", features = ["with-serde-json"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
crossbeam-channel = "0.4"
uuid = { version = "0.8", features = ["v4"]}
anyhow = "1.0"

[dev-dependencies]
env_logger = "0.8"