[package]
name = "zkstate"
description = "Share a struct across multiple instances of an application using zookeeper"
version = "0.1.13"
authors = ["Colum McGaley <colum.mcgaley@fastmail.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["zookeeper", "shared-state"]
categories = ["concurrency"]
homepage = "https://rust.volf.co/zkstate"
repository = "https://github.com/volfco/zkstate"
readme = "README.md"


[dependencies]
zookeeper = "0.6"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
treediff = { version = "4.0", features = ["with-serde-json"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
crossbeam-channel = "0.4"
uuid = { version = "0.8", features = ["v4"]}
anyhow = "1.0"

[dev-dependencies]
env_logger = "0.8"